RESOLVED FIXED137247
REGRESSION(r173929): [GTK] TestInspector fails after r173929
https://bugs.webkit.org/show_bug.cgi?id=137247
Summary REGRESSION(r173929): [GTK] TestInspector fails after r173929
Carlos Garcia Campos
Reported 2014-09-30 00:40:36 PDT
TEST: ./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestInspector... (pid=17886) /webkit2/WebKitWebInspector/default: ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestInspector.cpp:182:void testInspectorDefault(InspectorTest*, gconstpointer): assertion failed: (webkit_web_inspector_is_attached(test->m_inspector)) FAIL GTester: last random seed: R02Sb5a3208cbed2ede13a44add0e3064a3b (pid=17934) /webkit2/WebKitWebInspector/manual-attach-detach: ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestInspector.cpp:302:void testInspectorManualAttachDetach(CustomInspectorTest*, gconstpointer): assertion failed: (webkit_web_inspector_is_attached(test->m_inspector)) FAIL GTester: last random seed: R02S8b3ab0382d9c8b6c83596d3a75ce7e81 (pid=17980) /webkit2/WebKitWebInspector/custom-container-destroyed: OK FAIL: ./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestInspector The problem is that the test does this: resizeView(); // To make room for the attached inspector. attach(); but since r173929 the attach availability is no longer synchronous, and attach right after resizeView() does nothing.
Attachments
Patch (13.09 KB, patch)
2014-09-30 00:48 PDT, Carlos Garcia Campos
no flags
Fix typo (13.09 KB, patch)
2014-09-30 00:57 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-09-30 00:48:46 PDT
Philippe Normand
Comment 2 2014-09-30 00:54:02 PDT
Comment on attachment 238914 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=238914&action=review > Source/WebKit2/UIProcess/API/gtk/WebKitWebInspector.cpp:157 > + _("Can Atach"), Attach
Carlos Garcia Campos
Comment 3 2014-09-30 00:57:52 PDT
Created attachment 238915 [details] Fix typo
Philippe Normand
Comment 4 2014-09-30 01:08:03 PDT
Comment on attachment 238915 [details] Fix typo Looks good to me!
Carlos Garcia Campos
Comment 5 2014-09-30 06:38:16 PDT
Note You need to log in before you can comment on or make changes to this bug.